fix(deps): un-lock dependencies

--- a/package.json
+++ b/package.json
@@ -68,13 +68,13 @@
     "@testing-library/react": "^9.4.0",
     "@types/react": "^16.9.19",
     "babel-eslint": "^10.0.3",
-    "classnames": "2.2.6",
+    "classnames": "^2.2.6",
     "coveralls": "^3.0.9",
     "jest": "^25.1.0",
     "markdown-toc": "^1.2.0",
-    "moment": "2.24.0",
+    "moment": "^2.24.0",
     "nyc": "^15.0.0",
-    "pre-push": "0.1.1",
+    "pre-push": "^0.1.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
