fix(git): change urls to repo

--- a/examples/clock/package.json
+++ b/examples/clock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clock",
-  "homepage": "https://solkimicreb.github.io/react-easy-state/examples/clock/build/",
+  "homepage": "https://RisingStack.github.io/react-easy-state/examples/clock/build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
