--- a/examples/todo-mvc/package.json
+++ b/examples/todo-mvc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-mvc",
-  "homepage": "https://solkimicreb.github.io/react-easy-state/examples/todo-mvc/build/",
+  "homepage": "https://RisingStack.github.io/react-easy-state/examples/todo-mvc/build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
