--- a/examples/beer-finder/package.json
+++ b/examples/beer-finder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beer-finder",
-  "homepage": "https://solkimicreb.github.io/react-easy-state/examples/beer-finder/build/",
+  "homepage": "https://RisingStack.github.io/react-easy-state/examples/beer-finder/build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
