--- a/examples/stop-watch/package.json
+++ b/examples/stop-watch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stop-watch",
-  "homepage": "https://solkimicreb.github.io/react-easy-state/examples/stop-watch/build/",
+  "homepage": "https://RisingStack.github.io/react-easy-state/examples/stop-watch/build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
