--- a/examples/beer-finder/package.json
+++ b/examples/beer-finder/package.json
@@ -4,14 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
-    "material-ui-search-bar": "^1.0.0-beta.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-easy-state": "^6.1.2",
-    "react-scripts": "3.0.1"
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
+    "material-ui-search-bar": "1.0.0-beta.13",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-easy-state": "^6.1.3",
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
