--- a/examples/native-clock/package.json
+++ b/examples/native-clock/package.json
@@ -4,17 +4,21 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.6",
+    "expo": "~36.0.0",
     "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-easy-state": "^6.1.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-easy-state": "^6.1.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "~8.0.0",
+    "@babel/core": "^7.0.0"
   },
   "private": true
 }
