--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "npm run test-web && npm run test-native",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test-builds": "node ./scripts/testBuilds.js",
-    "lint": "standard",
-    "lint-fix": "prettier --ignore-path '.gitignore' --write '**/*.{js,jsx}' '!**/build/**' && standard --fix",
+    "lint": "eslint --max-warnings 0 --ext js,jsx src scripts",
+    "lint-fix": "eslint --max-warnings 0 --ext js,jsx src scripts --fix",
     "install-examples": "node ./scripts/installExamples.js",
     "build-examples": "node ./scripts/buildExamples.js",
     "link-examples": "node ./scripts/linkExamples.js",
@@ -64,12 +64,23 @@
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-angular": "^8.3.4",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@types/react": "^16.9.19",
     "babel-eslint": "^10.0.3",
     "classnames": "^2.2.6",
     "coveralls": "^3.0.9",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^4.2.3",
     "jest": "^25.1.0",
     "markdown-toc": "^1.2.0",
     "moment": "^2.24.0",
@@ -88,26 +99,18 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "sinon": "^8.1.1",
-    "standard": "^14.3.1",
     "styled-components": "^5.0.1"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "env": [
-      "browser",
-      "jest"
-    ],
-    "ignore": [
-      "**/build/**",
-      "**/node_modules/**",
-      "examples/**"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "pre-push": [
-    "lint",
     "test"
   ]
 }
