--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "build": "rollup --config",
     "build-toc": "node ./scripts/buildToc.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run lint-tests",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-push": "npm t"
+    }
+  },
   "author": {
     "name": "Miklos Bertalan",
     "email": "miklos.bertalan@risingstack.com"
@@ -87,7 +94,6 @@
     "markdown-toc": "^1.2.0",
     "moment": "^2.24.0",
     "nyc": "^15.0.0",
-    "pre-push": "^0.1.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -103,15 +109,7 @@
     "styled-components": "^5.0.1"
   },
   "engines": {
-    "node": ">=6.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run lint-tests",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "pre-push": [
-    "test"
-  ]
+    "node": ">=10.0.0",
+    "npm": ">=6.9.0"
+  }
 }
