ci(examples): start locally linked example with npm script

--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "test-web": "jest --config ./jest.web.json",
     "test-web-no-hook": "NOHOOK=true jest --config ./jest.no-hook.json",
     "test": "npm run test-web && npm run test-web-no-hook && npm run test-native",
+    "example-beer-finder": "node ./scripts/startExample.js ./examples/beer-finder",
+    "example-clock": "node ./scripts/startExample.js ./examples/clock",
+    "example-contacts": "node ./scripts/startExample.js ./examples/contacts",
+    "example-stop-watch": "node ./scripts/startExample.js ./examples/stop-watch",
+    "example-todo-mvc": "node ./scripts/startExample.js ./examples/todo-mvc",
+    "example-native-clock": "node ./scripts/startExample.js ./examples/native-clock",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test-builds": "node ./scripts/testBuilds.js",
     "lint": "eslint --max-warnings 0 --ext js,jsx src scripts",
@@ -76,6 +82,7 @@
     "@babel/preset-react": "^7.8.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@types/react": "^16.9.19",
@@ -108,7 +115,6 @@
     "rollup": "^1.31.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "sinon": "^8.1.1",
     "styled-components": "^5.0.1"
   },
