--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "react/prefer-stateless-function": "off",
     "react/destructuring-assignment": "off",
     "react/state-in-constructor": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off"
   },
   "globals": {
