docs(readme): change react-easy-state to @risingstack/react-easy-state

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -25,7 +25,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "react-easy-state",
+  "projectName": "@risingstack/react-easy-state",
   "projectOwner": "RisingStack",
   "repoType": "github",
   "repoHost": "https://github.com",
