--- a/examples/clock/package.json
+++ b/examples/clock/package.json
@@ -7,7 +7,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-easy-state": "^6.1.3",
+    "@risingstack/react-easy-state": "^6.1.3",
     "react-scripts": "3.3.1"
   },
   "scripts": {
