--- a/examples/contacts/package.json
+++ b/examples/contacts/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-easy-state": "^6.1.3",
+    "@risingstack/react-easy-state": "^6.1.3",
     "react-scripts": "3.3.1"
   },
   "scripts": {
