--- a/examples/todo-mvc/package.json
+++ b/examples/todo-mvc/package.json
@@ -7,7 +7,7 @@
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-easy-state": "^6.1.3",
+    "@risingstack/react-easy-state": "^6.1.3",
     "react-scripts": "3.3.1"
   },
   "scripts": {
