--- a/examples/beer-finder/package.json
+++ b/examples/beer-finder/package.json
@@ -10,7 +10,7 @@
     "material-ui-search-bar": "1.0.0-beta.13",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-easy-state": "^6.1.3",
+    "@risingstack/react-easy-state": "^6.1.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
