--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@risingstack/react-easy-state",
   "version": "6.1.3",
+  "private": false,
   "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
   "module": "dist/es.es6.js",
