ci(coverage): merge coverage results

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test-web-no-hook": "NOHOOK=true jest --config ./jest.no-hook.json --silent",
     "test": "npm run test-web && npm run test-web-no-hook && npm run test-native",
     "example": "node ./scripts/startExample.js",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "coveralls": "node ./scripts/mapCoverage.js && cat ./coverage/lcov.info | coveralls",
     "test-builds": "node ./scripts/testBuilds.js",
     "lint": "eslint --max-warnings 0 --ext js,jsx src scripts __tests__ __mocks__",
     "install-examples": "node ./scripts/installExamples.js",
@@ -88,13 +88,15 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "husky": "^4.2.3",
+    "istanbul-api": "^2.1.6",
+    "istanbul-lib-coverage": "^3.0.0",
     "jest": "^25.1.0",
     "markdown-toc": "^1.2.0",
     "moment": "^2.24.0",
-    "nyc": "^15.0.0",
     "no-hook-react": "npm:react@16.7.0",
     "no-hook-react-dom": "npm:react-dom@16.7.0",
     "no-hook-react-testing-library": "npm:react-testing-library@5.4.4",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.13.0",
