--- a/examples/pokedex/package.json
+++ b/examples/pokedex/package.json
@@ -11,6 +11,7 @@
     "graphql": "^14.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-easy-state": "^6.1.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
