fix(auto-effect-test): fix a linter related testing issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
     "react/destructuring-assignment": "off",
     "react/state-in-constructor": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/jsx-one-expression-per-line": "off"
   },
   "globals": {
     "window": true,
