--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@risingstack/react-easy-state",
-  "version": "6.1.3",
+  "version": "0.0.0-development",
   "private": false,
   "description": "React state management with a minimal API. Made with ES6 Proxies.",
   "main": "dist/cjs.es6.js",
@@ -22,7 +22,8 @@
     "install-examples": "node ./scripts/installExamples.js",
     "build-examples": "node ./scripts/buildExamples.js",
     "build": "rollup --config",
-    "build-toc": "node ./scripts/buildToc.js"
+    "build-toc": "node ./scripts/buildToc.js",
+    "semantic-release": "semantic-release"
   },
   "husky": {
     "hooks": {
@@ -37,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:RisingStack/react-easy-state.git"
+    "url": "https:git@github.com:RisingStack/react-easy-state.git"
   },
   "bugs": {
     "url": "https://github.com/RisingStack/react-easy-state/issues"
@@ -106,6 +107,7 @@
     "rollup": "^2.0.6",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.4.0",
+    "semantic-release": "^17.0.4",
     "sinon": "^9.0.1",
     "styled-components": "^5.0.1"
   },
