--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https:git@github.com:RisingStack/react-easy-state.git"
+    "url": "https://github.com/RisingStack/react-easy-state.git"
   },
   "bugs": {
     "url": "https://github.com/RisingStack/react-easy-state/issues"
