--- a/package.json
+++ b/package.json
@@ -113,7 +113,6 @@
     "styled-components": "^5.0.1"
   },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.9.0"
+    "node": ">=6.0.0"
   }
 }
