--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "rollup": "^2.0.6",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-replace": "^2.2.0",
     "semantic-release": "^17.0.4",
     "sinon": "^9.0.1",
     "styled-components": "^5.0.1"
