--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,4 +53,6 @@ workflows:
             - test-node-support
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - alpha
