--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "@babel/compat-data": "^7.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
     "@rollup/plugin-node-resolve": "^7.1.1",
@@ -107,7 +108,7 @@
     "react-native-testing-library": "^1.12.0",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.13.0",
-    "rollup": "^2.0.6",
+    "rollup": "^2.38.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-replace": "^2.2.0",
