--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test-builds": "node ./scripts/testBuilds.js",
     "lint": "eslint --max-warnings 0 --ext js,jsx src scripts __tests__ __mocks__",
+    "lint-fix": "eslint --fix --max-warnings 0 --ext js,jsx src scripts __tests__ __mocks__",
     "install-examples": "node ./scripts/installExamples.js",
     "build-examples": "node ./scripts/buildExamples.js",
     "build": "rollup --config",
@@ -87,7 +88,7 @@
     "coveralls": "^3.1.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
@@ -101,7 +102,7 @@
     "no-hook-react-dom": "npm:react-dom@16.7.0",
     "no-hook-react-testing-library": "npm:react-testing-library@5.4.4",
     "nyc": "^15.1.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.13.0",
     "react-native": "^0.63.4",
